# molybdenum

./: Cargo.toml  README.md  rakefile.rb  readme.md
src/: cli.rs  file.rs  folder.rs  lib.rs  line.rs  main.rs  pattern.rs  res.rs  search.rs  util.rs
