[package]
name = "molybdenum"
description = "Recursive search and replace CLI application"
version = "0.1.3"
authors = ["Geert Fannes <geert.fannes@gmail.com>"]
edition = "2018"
license = "EUPL-1.1"
repository = "https://github.com/gfannes/molybdenum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mo"

[dependencies]
regex = "1.5.4"
colored = "2.0.0"
atty = "0.2.14"
